implement fevourites button

--- a/Lecture_14_6_Edit_Home/views/User/index.ejs
+++ b/Lecture_14_6_Edit_Home/views/User/index.ejs
@@ -75,7 +75,7 @@
               <p class="text-amber-600 font-semibold text-sm">
                 ₹ <%= home.price %> / night
               </p>
-              <%- include('../partials/favorite',{home}) %>
+              <%- include('../partials/favorite',{home,favourites}) %>
             </div>
 
             <!-- Book Now Button -->
