--- a/Lecture_14_6_Edit_Home/views/User/favorite.ejs
+++ b/Lecture_14_6_Edit_Home/views/User/favorite.ejs
@@ -76,12 +76,19 @@
               <p class="text-amber-600 font-semibold text-sm">
                 ₹ <%= home.price %> / night
               </p>
-              <%- include('../partials/favorite',{ home }) %>
+              <%- include('../partials/favorite',{ home,favourites}) %>
             </div>
-
+            <!-- <form action="/favourites/delete/<%=home.id%>" method="POST">
+              <button
+                type="submit"
+                class="mt-3 text-center px-4 py-2 text-sm font-medium text-white bg-emerald-600 rounded-lg hover:bg-emerald-700 transition"
+              >
+                Remove favourites
+              </button>
+            </form> -->
             <!-- Book Now Button -->
             <a
-              href="/book-home/<%= home.id %>"
+              href="/book-home/:<%=home.id%>"
               class="block w-full mt-3 text-center px-4 py-2 text-sm font-medium text-white bg-emerald-600 rounded-lg hover:bg-emerald-700 transition"
             >
               Book Now
