--- a/Lecture_14_6_Edit_Home/views/partials/favorite.ejs
+++ b/Lecture_14_6_Edit_Home/views/partials/favorite.ejs
@@ -1,19 +1,25 @@
+<% const isFav = favourites.includes(home.id) %>
+
 <form action="/favorite" method="post">
-  <input type="hidden" name="id" value="<%= home.id%>" />
+  <input type="hidden" name="id" value="<%= home.id %>" />
+
   <button
     type="submit"
-    class="p-1.5 rounded-full border border-gray-300 hover:bg-red-100 transition"
-    title="Add to favorites"
+    title="<%= isFav ? 'Remove from favourites' : 'Add to favourites' %>"
+    class="p-1.5 rounded-full border transition <%= isFav ? 'bg-red-100 border-red-300' : 'border-gray-300 hover:bg-red-100' %>"
   >
-    <svg class="w-4 h-4 fill-current text-gray-400" viewBox="0 0 24 24">
+    <svg
+      class="w-4 h-4 fill-current <%= isFav ? 'text-red-500' : 'text-gray-400' %>"
+      viewBox="0 0 24 24"
+    >
       <path
         d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5
-                        2 5.42 4.42 3 7.5 3
-                        9.24 3 10.91 3.81 12 5.08
-                        13.09 3.81 14.76 3 16.5 3
-                        19.58 3 22 5.42 22 8.5
-                        22 12.28 18.6 15.36 13.45 20.04
-                        L12 21.35z"
+           2 5.42 4.42 3 7.5 3
+           9.24 3 10.91 3.81 12 5.08
+           13.09 3.81 14.76 3 16.5 3
+           19.58 3 22 5.42 22 8.5
+           22 12.28 18.6 15.36 13.45 20.04
+           L12 21.35z"
       />
     </svg>
   </button>
